# blupipy

./: .gitignore  README.md  pyproject.toml
blueprints/project_template_fastapi/: Dockerfile  Makefile  README.md  answers.txt  answers1.txt  cookiecutter.json  entrypoint.sh
blueprints/project_template_fastapi/hooks/: post_gen_project.py
blueprints/project_template_fastapi/{{cookiecutter.project_slug}}/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
blueprints/project_template_fastapi/{{cookiecutter.project_slug}}/app/core/: config.py  events.py
src/: app.py  main.py
