[tool.poetry]
name = "blupipy"
version = "0.1.0"
description = ""
authors = ["Joao Ribeiro <joao.martins.ribeiro@devoteam.com>"]
readme = "README.md"
packages = [
    {include = "./src/"}
]

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
blupipy = "src.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
